--- a/src/pages/question/Edit/ComponentLib.module.scss
+++ b/src/pages/question/Edit/ComponentLib.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
   margin-bottom: 12px;
   cursor: pointer;
-  background-color: #fff;
+  background-color: #f1f1f1;
   padding: 12px;
   border-radius: 3px;
 
