--- a/src/pages/question/Edit/index.module.scss
+++ b/src/pages/question/Edit/index.module.scss
@@ -18,6 +18,8 @@
     width: 295px;
     background-color: #fff;
     padding: 0 12px;
+    height: calc(100vh - 76px);
+    overflow: auto;
   }
   .main {
     flex: 1;
@@ -27,7 +29,7 @@
     .canvas-wrapper {
       position: absolute;
       width: 400px;
-      height: 712px;
+      height: calc(100vh - 100px);
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
